feat: Production-ready MVP with authentication, OpenAI integration, and comprehensive features
- Add user authentication (email/password registration and login)
- Integrate OpenAI GPT-4o-mini for job analysis and resume scoring
- Implement security middleware (rate limiting, input sanitization, security headers)
- Add comprehensive error handling and structured logging
- Add API documentation with Swagger/OpenAPI
- Add unit tests for critical services
- Add performance optimizations (compression, caching, pagination)
- Add database backup/export utilities
- Fix date handling in profile service
- Fix application tracker filtering
- Fix sidebar collapse functionality
- Update README with current features and setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,12 @@ yarn-error.log*
 
 # Testing
 coverage/
+*.test.ts.snap
+
+# Test results and temporary files
+TEST_RESULTS.md
+test-comprehensive.ps1
+*.log
 
 # Misc
 *.tsbuildinfo
