--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "db:export": "ts-node src/scripts/export.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^3.0.3",
     "compression": "^1.8.1",
@@ -40,6 +42,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^30.2.0",
     "prisma": "^5.14.0",
     "supertest": "^7.1.4",
